Omnibox UI: Fix Answers in Suggest display in Views

Fixes a regression introduced by an Omnibox UI experiment patch.

BUG=729974

Review-Url: https://codereview.chromium.org/2929003002
Cr-Commit-Position: refs/heads/master@{#478299}

Former-commit-id: f2637fc408350b9cd9fa90cf35bad8c286776b9c